--- a/calebsite.css
+++ b/calebsite.css
@@ -1,3 +1,50 @@
+@font-face {
+	font-family: fort;
+	src: url(/assets/Fort-Book.otf);
+	font-weight: normal;
+}
+@font-face {
+	font-family: fort;
+	src: url(/assets/Fort-BookItalic.otf);
+	font-weight: normal;
+	font-style: italic;
+}
+@font-face {
+	font-family: fort;
+	src: url(/assets/Fort-Bold.otf);
+	font-weight: bold;
+}
+@font-face {
+	font-family: fort;
+	src: url(/assets/Fort-BoldItalic.otf);
+	font-weight: bold;
+	font-style: italic;
+}
+@font-face {
+	font-family: fort;
+	src: url(/assets/Fort-Thin.otf);
+	font-weight: 100;
+}
+@font-face {
+	font-family: fort;
+	src: url(/assets/Fort-ThinItalic.otf);
+	font-weight: 100;
+	font-style: italic;
+}
+@font-face {
+	font-family: fort;
+	src: url(/assets/Fort-Black.otf);
+	font-weight: 900;
+}
+@font-face {
+	font-family: fort;
+	src: url(/assets/Fort-BlackItalic.otf);
+	font-weight: 900;
+	font-style: italic;
+}
 h1, p {
-	font-family: helvetica, sans-serif;
+	font-family: fort, sans-serif;
+}
+h1 {
+	font-size: 3em;
 }
