--- a/calebsite.css
+++ b/calebsite.css
@@ -42,9 +42,36 @@
 	font-weight: 900;
 	font-style: italic;
 }
-h1, p {
+@font-face {
+	font-family: blue-fires;
+	src: url(/assets/BlueFires.otf);
+	font-weight: normal;
+}
+h2, h3, h4, h5, body, p {
 	font-family: 'fort', sans-serif;
 }
+body, p {
+	font-size: 1em;
+	font-weight: normal;
+}
 h1 {
+	font-family: 'blue-fires', sans-serif;
 	font-size: 3em;
+	font-weight: 900;
+}
+h2 {
+	font-size: 3em;
+	font-weight: 900;
+}
+h3 {
+	font-size: 2.5em;	
+	font-weight: bold;
+}
+h4 {
+	font-size: 2em;	
+	font-weight: normal;
+}
+h5 {
+	font-size: 1.5em;	
+	font-weight: 100;
 }
