--- a/calebsite.css
+++ b/calebsite.css
@@ -22,12 +22,12 @@
 }
 @font-face {
 	font-family: fort;
-	src: url(/assets/Fort-Thin.otf);
+	src: url(/assets/Fort-Extralight.otf);
 	font-weight: 100;
 }
 @font-face {
 	font-family: fort;
-	src: url(/assets/Fort-ThinItalic.otf);
+	src: url(/assets/Fort-ExtralightItalic.otf);
 	font-weight: 100;
 	font-style: italic;
 }
@@ -51,27 +51,26 @@ h2, h3, h4, h5, body, p {
 	font-family: 'fort', sans-serif;
 }
 body, p {
-	font-size: 1em;
+	font-size: 1rem;
 	font-weight: normal;
 }
 h1 {
 	font-family: 'blue-fires', sans-serif;
-	font-size: 3em;
-	font-weight: 900;
+	font-size: 3rem;
 }
-.h2 {
-	font-size: 3em;
+h2 {
+	font-size: 3rem;
 	font-weight: 900;
 }
 h3 {
-	font-size: 2.5em;	
+	font-size: 2.5rem;	
 	font-weight: bold;
 }
 h4 {
-	font-size: 2em;	
+	font-size: 2rem;	
 	font-weight: normal;
 }
 h5 {
-	font-size: 1.5em;	
+	font-size: 1.5rem;	
 	font-weight: 100;
 }
