--- a/main.css
+++ b/main.css
@@ -16,22 +16,26 @@
 
 :root {
   --coffee: #3F3334;
-  --coral: #EC847D;
+  --coral: #ec847d;
   --mint: #AFEFC9;
   --blue: #255C99;
-  --yellow: #FBD87f;
+  --yellow: #fbd87f;
 }
-
+html {
+  width: 100vw;
+  height: auto;
+}
 body {
   font-size: 1.2rem;
   color: var(--coffee);
   background-color: white;
-  margin: 160px 0 0 0;
   position: relative;
+  margin: 0px;
   font-family: 'HK Grotesk', Helvetica, Arial, sans-serif;
 }
 .header {
   position: fixed;
+  display: block;
   width: 100%;
   top: 0;
   left: 0;
@@ -39,6 +43,7 @@ body {
   background-color: white;
   border-bottom: solid 10px var(--yellow);
   box-shadow: 0 0 24px 1px rgba(37,92,153,0.25);
+  overflow-x: hidden;
 }
 .svg-corners {
   position: fixed;
@@ -73,6 +78,7 @@ body {
 }
 .header a#logo {
   width: 150px;
+  float: left;
 }
 .header a {
   float: left;
@@ -138,7 +144,7 @@ body {
   d: path("M0 100 L0 100 L2000 100 L2000 100 Z");
 }
 .jumpy:hover svg .jumpy_bg {
-  animation: jumpyness .4s ease-in forwards;
+  animation: jumpyness .3s ease-in forwards;
 }
 @keyframes jumpyness{
   0% {d: path("M0 100 L0 100 L2000 100 L2000 100 Z");}
@@ -196,9 +202,105 @@ body {
   margin: 30px 0;
 }
 #tv {
-  background: black;
+  background: white;
   width: 100%;
-  height: 600px;
+  height: auto;
   display: block;
-  margin-top: 20px;
+  margin: 190px 0 0 0 !important;
 }
+#tv-screen {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  object-fit: cover;
+  margin: 0 auto;
+  text-align: center;
+}
+#reel {
+  height: 100% !important;
+  width: auto !important;
+  max-height: 100vh !important;
+  min-height: 100%;
+  min-width: 400px;
+  max-width: 100vw;
+}
+#tv-credits {
+  font-family: 'HK Grotesk', Helvetica, sans-serif;
+  font-size: 1rem;
+  background-color: var(--mint);
+  padding: 5px 0px;
+  margin-top: 0px !important;
+  text-align: center;
+}
+/* BG color & shape for 'Play/Pause' button */
+/*
+#play-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  margin: auto auto 0 0;
+  width: 50px;
+  height: 50px;
+  z-index: 1;
+  cursor: pointer;
+  padding: 20px;
+  display: none;
+  background-color: rgba(37, 92, 153,0.5);
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
+.play-pause {
+  position: relative;
+  margin: 2px auto 0 4px;
+  width: 50px;
+  height: auto;
+  z-index: 2;
+  cursor: pointer;
+  fill: white;
+}
+.pausedPlayIcon {
+  d: path("M0 75 L0 0 L0 0 L82 37.66 Z");
+}
+.pausedRight {
+  d: path("M47 75 L47 0 L69 0 L69 75 Z");
+}
+.pausedLeft {
+  d: path("M0 75 L0 0 L22 0 L22 75 Z");
+}
+.left-pp-ani {
+  animation: pauseLeft .3s ease-out forwards;
+}
+.left-pp-ani-b {
+  animation: pauseLeft .3s ease-out backwards;
+}
+.right-pp-ani {
+  animation: pauseRight .3s ease-out forwards;
+}
+.right-pp-ani-b {
+  animation: pauseRight .3s ease-out backwards;
+}
+@keyframes pauseRight {
+  0% {d: path("M0 75 L0 0 L0 0 L82 37.66 Z");}
+  50% {d: path("M0 75 L0 0 L22 0 L22 75 Z");}
+  100% {d: path("M47 75 L47 0 L69 0 L69 75 Z");}
+} 
+@keyframes pauseLeft {
+  0% {d: path("M0 75 L0 0 L0 0 L82 37.66 Z");}
+  50% {d: path("M0 75 L0 0 L22 0 L22 75 Z");}
+  100% {d: path("M0 75 L0 0 L22 0 L22 75 Z");}
+}
+#unmute, #mute {
+  font-family: 'HK Grotesk', Helvetica, sans-serif;
+  color: black;
+  height: auto;  
+  position: absolute;
+  bottom: 50px;
+  z-index: 1;
+  cursor:pointer;
+  padding: 4px;
+  background-color:rgba(236, 132, 125,0.4);
+  display: none;
+  border-radius: 5px;
+}
+*/
