--- a/main.css
+++ b/main.css
@@ -21,17 +21,41 @@
   --blue: #255C99;
   --yellow: #fbd87f;
 }
+
 html {
   width: 100vw;
   height: auto;
+  padding-bottom: 100px;
 }
 body {
   font-size: 1.2rem;
   color: var(--coffee);
   background-color: white;
   position: relative;
-  margin: 0px;
+  margin: 190px 0 0 0;
   font-family: 'HK Grotesk', Helvetica, Arial, sans-serif;
+}
+
+h1 {
+  font-family: 'Runalto', 'HK Grotesk', Helvetica, sans-serif;
+  font-size: 3rem;
+  line-height: 2.5rem;
+  margin: 30px 0 20px 0;
+}
+h2 {
+  font-family: 'Paradroid-Mono', 'Courier New', Courier, monospace;
+  font-size: 1.5rem;
+  color: var(--coffee);
+  -webkit-text-stroke: 0.5pt var(--coffee);
+  margin: 20px 0 10px 5px;
+}
+h3 {
+  font-family: 'HK Grotesk', Helvetica, Arial;
+  font-size: 1.2rem;
+  color: var(--coffee);
+  margin: 0 0 0 10px;
+  line-height: 1.6rem;
+  font-weight: bold;
 }
 .header {
   position: fixed;
@@ -41,7 +65,7 @@ body {
   left: 0;
   z-index: 20;
   background-color: white;
-  border-bottom: solid 10px var(--yellow);
+  border-bottom: solid 10px var(--blue);
   box-shadow: 0 0 24px 1px rgba(37,92,153,0.25);
   overflow-x: hidden;
 }
@@ -70,11 +94,11 @@ body {
 #coral {
   fill: var(--coral);
   d: path("M60 0 L100 0 L100 16 Z");
-  transition: 1s cubic-bezier(0.14, 0.05, 0.36, 0.98) .05s;
+  transition: 1s cubic-bezier(0.14, 0.05, 0.36, 0.98) .03s;
 }
 .header-right:hover #coral {
   d: path("M30 0 L100 0 L100 14 Z");
-  transition: .7s cubic-bezier(0.14, 0.05, 0.36, 0.98) .07s;
+  transition: .7s cubic-bezier(0.14, 0.05, 0.36, 0.98) .04s;
 }
 .header a#logo {
   width: 150px;
@@ -107,16 +131,9 @@ body {
 .header-right a:hover {
   color: var(--coral);
 }
-@keyframes bump {
-  0%   { background-size: 15px; }
-  25%  { background-size: 17px; }
-  50%  { background-size: 15px; }
-  75%  { background-size: 16px; }
-  100% { background-size: 15px; }
-}
 #current_page {
   background-image: url("images/page_ind.svg");
-  background-size: 15px;
+  background-size: 10px;
   background-repeat: repeat-x;
   background-position: bottom;
 }
@@ -127,6 +144,13 @@ body {
   color: var(--coffee);
   animation: bump .4s ease-in-out;
   cursor: default;
+}
+@keyframes bump {
+  0%   { background-size: 10px; }
+  25%  { background-size: 12px; }
+  50%  { background-size: 10px; }
+  75%  { background-size: 11px; }
+  100% { background-size: 10px; }
 }
 .jumpy {
   position: fixed;
@@ -141,65 +165,58 @@ body {
   width: 100%;
   height: auto;
   left: 0;
-  d: path("M0 100 L0 100 L2000 100 L2000 100 Z");
 }
 .jumpy:hover svg .jumpy_bg {
   animation: jumpyness .3s ease-in forwards;
 }
 @keyframes jumpyness{
-  0% {d: path("M0 100 L0 100 L2000 100 L2000 100 Z");}
-  33% {d: path("M0 100 L0 40 L2000 40 L2000 100 Z");}
-  66% {d: path("M0 100 L0 56 L2000 56 L2000 100 Z");}
-  100% {d: path("M0 100 L0 50 L2000 50 L2000 100 Z");}
+  0% {d: path("M0 87 L0 87 L2000 87 L2000 87 Z");}
+  33% {d: path("M0 87 L0 48 L2000 48 L2000 87 Z");}
+  66% {d: path("M0 87 L0 64 L2000 64 L2000 87 Z");}
+  100% {d: path("M0 87 L0 58 L2000 58 L2000 87 Z");}
 }
-.section {
-  display: flex;
+.title_container {
   position: relative;
   z-index: 5;
   height: 70px;
   width: 100%;
-  padding-top: 85px;
+  padding-top: 60px;
+  left: 0;
 }
-#section-bg {
-  z-index: 10;
+.title_bg {
   position: absolute;
-  margin-top: 18px;
   left:0;
-  background: var(--yellow);
-  transform: rotate(3deg);
-  transform-origin: 0% 0%;
-  height: 40px;
-  width: 400px;
+  height: 25px;
+  min-width: 400px;
 }
 .section-title {
   font-family: 'Paradroid-Mono', 'Courier New', Courier, monospace;
   font-size: 2.6rem;
   color: var(--coffee);
   -webkit-text-stroke: 1pt var(--coffee);
-  display: block;
   position: relative;
   height: 100%;
   width: 100%;
-  margin: 0 20px;
+  padding: 0 30px;
   overflow: hidden;
   z-index: 15;
   text-align: left;
+  background-image: linear-gradient(var(--yellow), var(--yellow));
+  background-repeat:  no-repeat;
+  background-position-y: 34px;
+  background-size: auto 24px;
+  background-origin: padding-box;
 }
-#section_container {
+.section_container {
   width: 75vw;
-  min-width: 700px;
-  min-height: 600px;
-  text-align: center;
-  position: absolute;
-  margin: 4vh auto;
-  left: 12.5vw;
-  display: block;
-}
-#page_header {
-  font-family: 'Runalto', 'HK Grotesk', Helvetica, sans-serif;
-  font-size: 3rem;
-  line-height: 2.5rem;
-  margin: 30px 0;
+  min-width: 600px;
+  min-height: 300px;
+  margin: 30px auto 50px auto;
+  display: flex;
+  align-items: center;
+  text-align: left;
+  border: 20pt solid var(--coral);
+  padding-bottom: 30px;
 }
 #tv {
   background: white;
