--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@
 :root {
   --coffee: #3F3334;
   --coral: #ec847d;
-  --mint: #AFEFC9;
+  --mint: rgb(175, 239, 201);
   --blue: #255C99;
   --yellow: #fbd87f;
 }
@@ -47,15 +47,15 @@ h2 {
   font-size: 1.5rem;
   color: var(--coffee);
   -webkit-text-stroke: 0.5pt var(--coffee);
-  margin: 20px 0 10px 5px;
+  margin: 20px 0 5px 5px;
 }
 h3 {
   font-family: 'HK Grotesk', Helvetica, Arial;
   font-size: 1.2rem;
   color: var(--coffee);
-  margin: 0 0 0 10px;
+  margin: 0 0 0 15px;
   line-height: 1.6rem;
-  font-weight: bold;
+  font-weight: normal;
 }
 .header {
   position: fixed;
@@ -200,8 +200,9 @@ h3 {
   -webkit-text-stroke: 1pt var(--coffee);
   position: relative;
   height: 100%;
-  width: 100%;
-  padding: 0 30px;
+  width: calc(100% - 30px);
+  padding-left: 30px;
+  margin-right: 30px;
   overflow: hidden;
   z-index: 15;
   text-align: left;
@@ -220,7 +221,7 @@ h3 {
   align-items: start;
   text-align: left;
   border: 20pt solid var(--coral);
-  padding-bottom: 30px;
+  padding-bottom: 40px;
 }
 .main_body_container {
   width: 90%;
