--- a/works/works.css
+++ b/works/works.css
@@ -1,14 +1,128 @@
-#tv {
-  background: white;
+/* WORKS CSS */
+.works_container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  column-gap: 20px;
+  justify-content: space-evenly;
+}
+.workbox {
+  width: 500px;
+  height: auto;
+  margin: 0 20px;
+  display: flex;
+  flex-direction: column;
+}
+.work_video {
+  width: 500px;
+  height: 281x;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+}
+.work_video video {
+  width: 500px;
+  height: 280px;
+}
+.thumbs {
   width: 100%;
-  height: 600px;
-  display: block;
-  margin-top: 20px;
-}
-#tv video {
   height: 100%;
-  width: auto;
-/*  max-height: 80vh; */
-  object-fit: cover;
-  position: absolute;
+  z-index: 1;
+  opacity: 100%;
 }
+.works_captions {
+  background-color: rgba(175, 239, 201, 0.6);
+  width: calc(100% - 30px);
+  height: calc(100% - 30px);
+  color: black;
+  z-index: 2;
+}
+.works_captions, .thumbs {
+  position: absolute;
+  opacity: 100%;
+  transition-duration: 500ms;
+}
+.works_captions p {
+  margin: 10px 15px;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.work_video:hover > .works_captions, .work_video:hover > .works_captions p, .work_video:hover > .thumbs {
+  opacity: 0%;
+  transition-duration: 500ms;
+}
+
+/* PNG Thumbnails */
+#thumb-raindrops {
+  background-image: url('thumbs/th-raindrops.png');
+}
+#thumb-de_video {
+  background-image: url('thumbs/th-de_video.png');
+}
+#thumb-curious {
+  background-image: url('thumbs/th-curious.png');
+}
+#thumb-bank_shot {
+  background-image: url('thumbs/th-bank_shot.png');
+}
+#thumb-snowy {
+  background-image: url('thumbs/th-snowy.png');
+}
+#thumb-busy_start {
+  background-image: url('thumbs/th-busy_start.png');
+}
+#thumb-busy_end {
+  background-image: url('thumbs/th-busy_end.png');
+}
+#thumb-muybridge {
+  background-image: url('thumbs/th-muybridge.png');
+}
+#thumb-castes {
+  background-image: url('thumbs/th-castes.png');
+}
+
+/* PRELOAD PREVIEWS */
+body::after {
+  position:absolute;
+  width:0;
+  height:0;
+  overflow:hidden;
+  z-index:-1;
+  content: url('previews/raindrops.webm')
+    url('previews/de_video.webm')
+    url('previews/kim.webm')
+    url('previews/bank_shot.webm')
+    url('previews/snowy.webm')
+    url('previews/busy_start.webm')
+    url('previews/busy-end.webm')
+    url('previews/muybridge.webm')
+    url('previews/castes.webm');
+} /*
+#mgv_A-b:hover {
+  background-image: url('gifs/de_video.gif');
+}
+#mgv_A-c:hover {
+  background-image: url('gifs/kim.gif');
+}
+#mgv_B-a:hover {
+  background-image: url('gifs/bank_shot.gif');
+}
+#mgv_B-b:hover {
+  background-image: url('gifs/snowy.gif');
+}
+#mgv_B-c:hover {
+  background-image: url('gifs/busy_start.gif');
+}
+#mgv_C-a:hover {
+  background-image: url('gifs/busy-end.gif');
+}
+#mgv_C-b:hover {
+  background-image: url('gifs/muybridge.gif');
+}
+#mgv_C-c:hover {
+  background-image: url('gifs/castes.gif');
+} */
