--- a/main.css
+++ b/main.css
@@ -10,13 +10,13 @@
 }
 @font-face {
   font-family: "Runalto";
-  src: url('fonts/Runalto.woff') format('woff');
+  src: url('fonts/Runalto.otf') format('opentype');
   font-weight: normal;
 }
 
 :root {
   --coffee: #3F3334;
-  --coral: #ec847d;
+  --coral: rgb(236, 132, 125);
   --mint: rgb(175, 239, 201);
   --blue: #255C99;
   --yellow: #fbd87f;
@@ -32,7 +32,7 @@ body {
   color: var(--coffee);
   background-color: white;
   position: relative;
-  margin: 190px 0 0 0;
+  margin: 160px 0 0 0;
   font-family: 'HK Grotesk', Helvetica, Arial, sans-serif;
 }
 
@@ -44,7 +44,6 @@ h1 {
 }
 h2 {
   font-family: 'Paradroid-Mono', 'Courier New', Courier, monospace;
-  /* font-size: 1.5rem; */
   font-size: 1.4rem;
   color: var(--coffee);
   -webkit-text-stroke: 0.5pt var(--coffee);
@@ -59,6 +58,7 @@ h3 {
   font-weight: normal;
 }
 .header {
+  /* border-bottom: solid 10px var(--mint); */
   position: fixed;
   display: block;
   width: 100%;
@@ -66,9 +66,8 @@ h3 {
   left: 0;
   z-index: 20;
   background-color: white;
-  border-bottom: solid 10px var(--blue);
-  box-shadow: 0 0 24px 1px rgba(37,92,153,0.25);
   overflow-x: hidden;
+  box-shadow: 0 0 24px 1px rgba(175, 239, 201, 0.55);
 }
 .dl_link {
   font-weight: bold;
@@ -111,7 +110,7 @@ h3 {
 }
 .header a {
   float: left;
-  margin: 30px 40px;
+  margin: 20px 40px;
 }
 @keyframes main-links {
   0% {opacity:0; padding-top: 120px;}
@@ -120,8 +119,9 @@ h3 {
 }
 .header-right {
   float:right;
+  min-width: 600px;
   animation: main-links 1s cubic-bezier(0.02, 0.7, 0.64, 0.99) forwards;
-  z-index: 100;
+  z-index: 25;
   padding-right: 70px;
 }
 .header-right a {
@@ -129,7 +129,7 @@ h3 {
   text-decoration: none;
   font-size: 1.6rem;
   color: var(--coffee);
-  margin: 10px 0 0 60px;
+  margin: 0 0 0 90px;
   padding: 0 10px;
   position: relative;
 }
@@ -180,49 +180,62 @@ h3 {
   66% {d: path("M0 87 L0 64 L2000 64 L2000 87 Z");}
   100% {d: path("M0 87 L0 58 L2000 58 L2000 87 Z");}
 }
-.title_container {
-  position: relative;
-  z-index: 5;
-  height: 70px;
-  width: 100%;
-  padding-top: 60px;
-  left: 0;
-}
-.title_bg {
-  position: absolute;
-  left:0;
-  height: 25px;
-  min-width: 400px;
-}
-.section-title {
+/* STICKY HEADERS */
+.section_title {
   font-family: 'Paradroid-Mono', 'Courier New', Courier, monospace;
   font-size: 2.6rem;
   color: var(--coffee);
-  -webkit-text-stroke: 1pt var(--coffee);
-  position: relative;
-  height: 100%;
   width: calc(100% - 30px);
-  padding-left: 30px;
+  padding: 30px 0 2px 30px;
   margin-right: 30px;
   overflow: hidden;
   z-index: 15;
   text-align: left;
+  background-color: var(--coral);
   background-image: linear-gradient(var(--yellow), var(--yellow));
   background-repeat:  no-repeat;
-  background-position-y: 34px;
-  background-size: auto 24px;
+  background-position-y: 65px;
+  background-size: auto;
   background-origin: padding-box;
+  position: -webkit-sticky;
+  position: -moz-sticky;
+  position: -o-sticky;
+  position: -ms-sticky;
+  position: sticky;
+  top: 160px;
+  display: block;
+  pointer-events: none;
 }
+.coral_bg {
+  background-color: var(--coral); /* var(--coral); */
+  width: 100%;
+  padding: 30px 0 50px 0;
+}
+.white_bg {
+  background-color: white;
+  width: 100%;
+  padding: 30px 0 50px 0;
+}
+/* .mint_bg {
+  background-color: var(--mint);
+}
+.yellow_bg {
+  background-color: var(--yellow);
+} */
 .section_container {
   width: 75vw;
   min-width: 600px;
   min-height: 100px;
-  margin: 30px auto 50px auto;
+  margin-top: 30px;
+  margin-right: auto;
+  padding-bottom: 10px;
+  margin-left: auto;
   display: flex;
   align-items: start;
   text-align: left;
-  border: 20pt solid var(--coral);
-  padding-bottom: 40px;
+  border-top: 10px solid var(--mint);
+  border-bottom: 10px solid var(--mint);
+  background-color: white;
 }
 .main_body_container {
   width: 90%;
@@ -240,6 +253,7 @@ h3 {
   background-color: white;
   position: relative;
   font-family: 'HK Grotesk', Helvetica, Arial, sans-serif;
+  padding-left: 20px;
 }
 #tv {
   background: white;
