--- a/resume/resume.css
+++ b/resume/resume.css
@@ -12,11 +12,13 @@
     margin: auto;
 }
 #resume-dl-links {
+    height: 30px;
+    padding: 3px 10px 5px 10px;
+    margin-top: 33px;
     position: absolute;
     right: 0;
-    top: 30px;
+    z-index: 25;
     background-color: var(--mint);
-    padding: 3px 10px 5px 10px;
 }
 #res_table {
     width: 90%;
